<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/SOS_button"
        android:layout_width="173dp"
        android:layout_height="179dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/SOS_button"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ADD_button"
        android:layout_width="89dp"
        android:layout_height="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="addContacts"
        android:text="@string/ADD_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/github_button"
        android:layout_width="140dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/github_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/teach_text"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/SOS_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>